--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-image: url("../src/assets/bg10.jpeg");
+  /* background-image: url("../src/assets/bg10.jpeg");
   background-size: contain;
-  background-attachment: fixed;
+  background-attachment: fixed; */
 }
